added protect middleware for routes
