# Social/cmd/api/middleware.go
@@ -11,6 +11,7 @@ import (
 	"strings"
 
 	"github.com/go-chi/chi/v5"
+	"github.com/golang-jwt/jwt/v5"
 )
 
 type postkey string
@@ -87,58 +88,109 @@ func (app *application) userContextMiddleware(next http.Handler) http.Handler {
 	})
 }
 
-
-
-//Basic authentication middleware 
+// Basic authentication middleware
 func (app *application) BasicAuthMiddleware() func(http.Handler) http.Handler {
-	return func (next http.Handler) http.Handler {
-		return http.HandlerFunc(func (w http.ResponseWriter, r *http.Request){
+	return func(next http.Handler) http.Handler {
+		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 
-			//step-1 read authorization header 
+			//step-1 read authorization header
 			authHeader := r.Header.Get("Authorization")
 
-			if authHeader == ""{
-				//no header 
-				app.unAuthorizedBasicError(w,r, fmt.Errorf("Authorization header is missing"))
-				return 
+			if authHeader == "" {
+				//no header
+				app.unAuthorizedBasicError(w, r, fmt.Errorf("Authorization header is missing"))
+				return
 			}
 			//step-2 Split header into parts
 
 			// header looks like: "Basic YWRtaW46cGFzc3dvcmQxMjM="
-            // after split:       ["Basic", "YWRtaW46cGFzc3dvcmQxMjM="]
-			parts := strings.Split(authHeader," ")
-			if len(parts) != 2 || parts[0] != "Basic"{
-				//wrong format or auth type 
-				app.unAuthorizedBasicError(w,r,fmt.Errorf("authorization header is malformed"))
-				return 
+			// after split:       ["Basic", "YWRtaW46cGFzc3dvcmQxMjM="]
+			parts := strings.Split(authHeader, " ")
+			if len(parts) != 2 || parts[0] != "Basic" {
+				//wrong format or auth type
+				app.unAuthorizedBasicError(w, r, fmt.Errorf("authorization header is malformed"))
+				return
 			}
-			//step-3  decode base64 
+			//step-3  decode base64
 
 			// "YWRtaW46cGFzc3dvcmQxMjM=" → "admin:password123"
 			decoded, err := base64.StdEncoding.DecodeString(parts[1])
 
 			if err != nil {
-				app.unAuthorizedBasicError(w,r,err)
-				return 
+				app.unAuthorizedBasicError(w, r, err)
+				return
 			}
 
-			//step-4 check credentials 
-			//Getting expected credentials from config 
+			//step-4 check credentials
+			//Getting expected credentials from config
 			username := app.config.auth.basic.username
 			password := app.config.auth.basic.password
 
-			//splitting the decoded string  by : 
-			creds := strings.SplitN(string(decoded),":",2)
+			//splitting the decoded string  by :
+			creds := strings.SplitN(string(decoded), ":", 2)
 
-			if len(creds) != 2 || creds[0] != username || creds[1] != password{
-				//wrong username or password 
-				app.unAuthorizedBasicError(w,r,fmt.Errorf("invalid credentials"))
-				return 
+			if len(creds) != 2 || creds[0] != username || creds[1] != password {
+				//wrong username or password
+				app.unAuthorizedBasicError(w, r, fmt.Errorf("invalid credentials"))
+				return
 			}
 
-			//step-5 everything ok, allow the request to go through 
-			next.ServeHTTP(w,r)
+			//step-5 everything ok, allow the request to go through
+			next.ServeHTTP(w, r)
 
 		})
 	}
+}
+
+
+//protect middleware 
+func (app *application) protect(next http.Handler) http.Handler{
+	return http.HandlerFunc( func(w http.ResponseWriter, r *http.Request){
+
+		//step -1 get token from auth header 
+		authHeader := r.Header.Get("Authorization")
+
+		if authHeader == ""{
+			app.unAuthorizedError(w,r,fmt.Errorf("Authorization header is missing"))
+			return 
+		}
+
+		//step-2 split the header into parts 
+		parts := strings.Split(authHeader," ")
+		if len(parts) != 2 || parts[0] != "Bearer" {
+			app.unAuthorizedError(w,r,fmt.Errorf("Invalid authrorization Header"))
+			return 
+		}
+
+		token := parts[1]
+
+		//step-3 verify token 
+		jwtToken, err := app.authenticator.ValidateToken(token)
+		if err != nil {
+			app.unAuthorizedError(w,r,fmt.Errorf("Invalid Token"))
+			return 
+		}
+
+		//get user id from jwtToken 
+		claims, _ := jwtToken.Claims.(jwt.MapClaims)
+		userID := int64(claims["sub"].(float64))
+
+		ctx := r.Context()
+		user,err := app.store.Users.GetById(ctx,userID)
+
+		if err != nil {
+			switch  {
+			case errors.Is(err, store.ErrConflict):
+				app.unAuthorizedError(w,r,fmt.Errorf("User not found"))
+				return
+			default:
+				app.internalServerError(w,r,err)
+				return 
+			}
+		}
+
+		//Store the. user in context 
+		ctx = context.WithValue(ctx,UserCtx, user)
+		next.ServeHTTP(w,r.WithContext(ctx))
+	} )
 }
